# shellac-engine

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: ci.yml
scripts/: lcov-gen
src/: CMakeLists.txt  main.cpp
src/board/: color.cpp  color.hpp  piece.cpp  piece.hpp  square.cpp  square.hpp  test_color.cpp  test_piece.cpp  test_square.cpp
src/util/: add.cpp  add.hpp  matrix.hpp  test_add.cpp  test_matrix.cpp  to_safe_larger_integral.hpp  to_underlying.hpp  type_string.hpp
